Security fixes and Refactor

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,10 +8,17 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApiDatabase": "Server=tcp:maduritomlapp.database.windows.net,1433;Initial Catalog=PDV;Persist Security Info=False;User ID=cjoga;Password=12Qw12qw12qw;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "WebApiDatabase": "<DatabaseServerString>"
   },
   "Jwt": {
     "Key": "UnaClaveSuperLargaQueNadieJamasAdivinaraLol#2",
-    "Issuer": "https://localhost:7100"
+    "Issuer": "https://localhost:5001"
+  },
+  "userAdm": {
+    "UserName": "Admin",
+    "Email": "admin@pdv.com",
+    "Nombre": "Administrador",
+    "EmailConfirmed": true,
+    "Password": "AdminP@ssw0rd123!#"
   }
 }
